# aoc22

./: pyproject.toml
aoc2022/: day_1.py  day_10.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py
