[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Benjamin Lyng Jørgensen <benjamin@lyng.space>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
